Fixing Overlap Issue on Active Item in Local Nav

--- a/src/_patterns/00-nds/02-molecules/navigation/navigation-local/navigation-local.scss
+++ b/src/_patterns/00-nds/02-molecules/navigation/navigation-local/navigation-local.scss
@@ -24,7 +24,7 @@
         border-bottom: $border-block;
         @include media-breakpoint-up($layout-mobile-menu-breakpoint) {
             display: block !important;
-            padding: $s-main-spacer 0;
+            padding: $s-main-spacer $s-1;
             max-height: 100vh;
             overflow-y: auto;
             border-bottom: 0;
